# college

./: .gitignore  README.md  task.toml
compiler/da/ass1/: input.txt
compiler/da/ass3/: alphabets  lex.yy.c
crypto/da/: topics.md
crypto/da/ass1/: ass.typ
crypto/da/ass4/: ass.typ
crypto/da/ass6/: ass.typ
crypto/da/topics/: ass.typ  lib.typ  works.bib
crypto/notes/: cat2.typ
dl/ass1/: ass.typ  lib.typ
dl/ass1/1/: main.py  pyproject.toml
dl/ass1/2/: main.py  pyproject.toml
dl/ass1/3/: main.py  pyproject.toml
dl/ass1/mnist/: config.py  config.toml  data.py  main.py  model.py  prepare_mnist.py  pyproject.toml  train.py  util.py
dl/ass1/mnist-self/: README.md  main.py  model.py  prepare_mnist.py  train.py
dl/ass1/plotq4/: hello.py  pyproject.toml  results.json
dl/gradient/: .gitignore  data.py  main.py  model.py  train.py  util.py  yann.md
embed/da/ass1/: ass.typ
embed/notes/cat1/: syllabus.md
fog/da/: ass.typ
gre/quant/: topic.md
infosec/da/ass1/: Untitled-2024-08-24-1353.excalidraw  ass.typ
infosec/topic/: ass.typ
java/: README.md  first.java
java/da1/: Main.java
java/day2/: a.out  isOdd.java  new.java  numPalindrome.java  test.java
java/mooc1/: One.java
os/ass1/: ass1.typ  lib.typ  q2.sh
os/ass2/: .justfile  main
os/ass3/q1/: .justfile
os/ass4/doc/: ass4.typ
os/ass4/q1/: .clangd
prev/fog/da/: lib.typ  works.bib
prev/fog/fat/: ass.typ  mod1.typ
prev/forest/: 13
prev/marching_cude/: ass.typ  lib.typ
prev/network/: lab_syllabus.md
privacy/notes/: cat2.typ
swe/notes/: cat2.typ
vit-ass/: ass.typ
(+159 files in other folders)
