[project]
name = "day1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aim>=3.29.1",
    "flax>=0.10.4",
    "jax==0.4.38",
    "numpy>=2.2.6",
    "optax>=0.2.4",
    "pillow>=11.2.1",
    "polars>=1.29.0",
    "rich>=14.0.0",
]
